--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
   - package: fivetran/salesforce
     version: [">=0.5.0", "<0.6.0"]
+
+  - package: fivetran/facebook_ads
+    version: [">=0.4.0", "<0.5.0"]
